<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_form"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="#fff"
        android:background="#19aedc"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/username"
        android:maxLines="1" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:maxLines="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="phone"
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:hint="@string/phone_number" />

    <TextView
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp" />
    
    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <RadioButton
        android:text="@string/male"
        android:checked="true"
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <RadioButton
        android:text="@string/female"
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    </RadioGroup>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>
    


</LinearLayout>